--- a/frontend/src/footer.css
+++ b/frontend/src/footer.css
@@ -2,6 +2,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Catamaran&display=swap');
 
 .footer {
+	font-family: 'Catamaran', sans-serif;
 	max-width: 100%;
 	width: 100%;
 	margin: 0px;
@@ -16,10 +17,12 @@
 .footer-down {
 	margin: 0px;
 	padding-bottom: 15px;
+
 }
 .footer-down-text {
 	padding-left: 0px;	
 }
 .logo {
-	font-size: 56px;
+	width: 75px;
+	padding-bottom: 15px;
 }
